public enum GamePhases{
    WelcomeAndBet,
    GetCards,
    Decision,
    Stand,
    EndAndPay
}

