public enum GamePlayers{
    Player,
    Dealer,
}

