public enum GameResults{
    Win,
    Draw,
    Lose
}

